--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 
 }
 
+
 body {
   background-color: #393E46;
 }
@@ -30,6 +31,12 @@ p {
 
 img {
   width: 80%;
+}
+#refreshButton{
+  text-align: center;
+  font-size: large;
+ 
+
 }
 
 footer {
